# C-state-pattern

./: CMakeLists.txt
include/: fsm.h
src/: fsm.c  main.c
